Fix Cloud KMS signing: extract key name correctly for jsign alias